# teParser

./: .gitignore  CMakeLists.txt  main.cxx
Algorithm/: CMakeLists.txt  parser.cxx  parser.hxx
